[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/options.gd" type="Script" id=1]
[ext_resource path="res://Themes/corona_ft.png" type="Texture" id=2]
[ext_resource path="res://fonts/perfect_dark.fnt" type="BitmapFont" id=3]

[node name="options" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( -1.54596, -0.337219 )
transform/scale = Vector2( 1.0021, 0.589301 )
texture = ExtResource( 2 )
centered = false

[node name="Options" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 405.0
margin/top = 43.0
margin/right = 506.0
margin/bottom = 88.0
custom_fonts/font = ExtResource( 3 )
text = "Options\n"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Music" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 120.0
margin/right = 230.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 3 )
text = "Music\n"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sound Effects" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 130.0
margin/top = 180.0
margin/right = 319.0
margin/bottom = 225.0
custom_fonts/font = ExtResource( 3 )
text = "Sound Effects\n"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back_to_menu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 353.0
margin/top = 503.0
margin/right = 554.0
margin/bottom = 530.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back to Menu"
flat = false

[node name="Music_on" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 120.0
margin/right = 549.0
margin/bottom = 148.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ON"
flat = false

[node name="Music_off" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 650.0
margin/top = 120.0
margin/right = 749.0
margin/bottom = 148.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OFF"
flat = false

[node name="Sound_on" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 180.0
margin/right = 549.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ON"
flat = false

[node name="Sound_off" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 650.0
margin/top = 180.0
margin/right = 749.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OFF"
flat = false

[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]

[connection signal="pressed" from="Music_on" to="." method="_on_Music_on_pressed"]

[connection signal="pressed" from="Music_off" to="." method="_on_Music_off_pressed"]

[connection signal="pressed" from="Sound_on" to="." method="_on_Sound_on_pressed"]

[connection signal="pressed" from="Sound_off" to="." method="_on_Sound_off_pressed"]


